Bug 506188 - Unable to move/copy files on desktop when dragging & dropping
Summary: Unable to move/copy files on desktop when dragging & dropping
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Desktop icons & Folder View widget (other bugs)
Version First Reported In: 6.4.1
Platform: Arch Linux Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
: 505984 506190 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-06-25 23:42 UTC by LuneLovehearn
Modified: 2025-07-17 09:11 UTC (History)
9 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: Frameworks 6.17
Sentry Crash Report:


Attachments
relevant video (1.29 MB, video/mp4)
2025-06-25 23:42 UTC, LuneLovehearn
Details
journalctl -f catching some relevant info (15.04 KB, text/x-log)
2025-06-25 23:44 UTC, LuneLovehearn
Details
video showcasing the bug even with a new user (1.58 MB, video/mp4)
2025-06-27 01:42 UTC, LuneLovehearn
Details
footage of the issue (1.77 MB, video/mp4)
2025-06-27 04:54 UTC, LuneLovehearn
Details

Note You need to log in before you can comment on or make changes to this bug.
Description LuneLovehearn 2025-06-25 23:42:01 UTC
Created attachment 182671 [details]
relevant video

SUMMARY
when moving files from the desktop to a folder, it does nothing. when trying to pull a file from within the folder widget into the desktop, it also does nothing. 
the only way to make it trigger the menu asking if I want to move, copy, etc, is by restarting plasma, but it will work as intended for like, 10 seconds, then it no longer shows the actions menu, and so on, needing to restart plasma. also, the folder widget isn't refreshing the view when the folder files are changed, moved, etc, also requiring a plasmashell restart (command: killall plasmashell && kstart plasmashell). this happens, regardless the icons being organized left to right/top to bottom, or aligned to left or right.

STEPS TO REPRODUCE
1. have files and folders on desktop
2. try to move files into folders, or folders into another folder, or drag a file from within a folder by using the folder widget, into the desktop
3. nothing happens.

OBSERVED RESULT
basically the desktop and the folder widget ignoring the drag and drop, not showing the "actions" menu with copy/move/link here

EXPECTED RESULT
the desktop, and folder widget actually drags and drops files, offering the "actions" menu, with copy/move/link/delete etc, options, regardless the folders, files, etc.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Arch Linux
KDE Plasma Version: 6.4.1
KDE Frameworks Version: 6.15.0
Qt Version: 6.9.1

ADDITIONAL INFORMATION
I attached a video, with the bug, and this time, journalctl did catch some error messages related to this.
Comment 1 LuneLovehearn 2025-06-25 23:44:36 UTC
Created attachment 182672 [details]
journalctl -f catching some relevant info

as additional info, this happens when upgrading from 6.3.5, on a system with vanilla breeze theme, no extra modifications, just the kora icon theme.
Comment 2 LuneLovehearn 2025-06-25 23:48:32 UTC
oh, another additional note: when trying to drag and drop files from eg, a flash drive, or any other folder on the system from dolphin into the desktop, it also does nothing, when on 6.3.5, it did opened the menu to copy/move/link etc actions
Comment 3 LuneLovehearn 2025-06-25 23:53:53 UTC
more additional info: when creating a .desktop for the Trash bin, the bug fixes itself for no reason.
Comment 4 LuneLovehearn 2025-06-26 00:04:41 UTC
correction: it seems that the drag and drop with the folder widget only works as expected when dragging and dropping from the Trash.desktop icon I made, but for every other regular folder, it doesn't work, as described on this bug report.

this is the code I used to make the Trash.desktop so I can have a "recycle bin" on my desktop:

[Desktop Entry]
Comment=Contains deleted files and folders
Icon=user-trash-full
EmptyIcon=user-trash
Type=Link
URL=trash:/
Name=Trash
OnlyShowIn=KDE;
Comment 5 LuneLovehearn 2025-06-26 00:09:24 UTC
(In reply to LuneLovehearn from comment #4)
> correction: it seems that the drag and drop with the folder widget only
> works as expected when dragging and dropping from the Trash.desktop icon I
> made, but for every other regular folder, it doesn't work, as described on
> this bug report.
> 
> this is the code I used to make the Trash.desktop so I can have a "recycle
> bin" on my desktop:
> 
> [Desktop Entry]
> Comment=Contains deleted files and folders
> Icon=user-trash-full
> EmptyIcon=user-trash
> Type=Link
> URL=trash:/
> Name=Trash
> OnlyShowIn=KDE;

correction: drag and drop does work with the trash.desktop, from the folder widget into desktop, and from files on desktop into trash.
it also works when dragging files from the desktop into dolphin, but not from dolphin into the desktop, after further testing.
Comment 6 Nate Graham 2025-06-26 16:21:33 UTC
This is a very strange set of symptoms.

Can you create a new clean user account on the same computer, make no customizations, and then still reproduce the bug? Or does it stop happening?

How did you install Plasma on your system?
Comment 7 Nate Graham 2025-06-26 16:23:59 UTC
*** Bug 506190 has been marked as a duplicate of this bug. ***
Comment 8 LuneLovehearn 2025-06-26 18:48:39 UTC
(In reply to Nate Graham from comment #6)
> This is a very strange set of symptoms.
> 
> Can you create a new clean user account on the same computer, make no
> customizations, and then still reproduce the bug? Or does it stop happening?
> 
> How did you install Plasma on your system?

this is a clean install of arch linux with archinstall. it had plasma 6.3.5 but I just upgraded it to 6.4.1
there are no customizations beyond just using the global menu and a top panel. 
I also used a virtual machine with arch and plasma 6.3.5, with no customizations, and the bug still happens.
the VM has an entire different user.
Comment 9 LuneLovehearn 2025-06-26 18:59:30 UTC
(In reply to LuneLovehearn from comment #8)
> (In reply to Nate Graham from comment #6)
> > This is a very strange set of symptoms.
> > 
> > Can you create a new clean user account on the same computer, make no
> > customizations, and then still reproduce the bug? Or does it stop happening?
> > 
> > How did you install Plasma on your system?
> 
> this is a clean install of arch linux with archinstall. it had plasma 6.3.5
> but I just upgraded it to 6.4.1
> there are no customizations beyond just using the global menu and a top
> panel. 
> I also used a virtual machine with arch and plasma 6.3.5, with no
> customizations, and the bug still happens.
> the VM has an entire different user.

if you mean a clean user with plasma 6.3.5 and upgrade it to 6.4.1, I can try. If you mean another user after the upgrade, I also can try.
Comment 10 TraceyC 2025-06-26 19:44:32 UTC
I'm not able to reproduce this with an existing user on git-master or KDE Neon with Plasma 6.4.1, KF 6.15.0, Qt 6.9.0, just as a data point

Can you try with a new user on your upgraded 6.4.1 system? Thanks.
Comment 11 LuneLovehearn 2025-06-27 01:40:55 UTC
(In reply to TraceyC from comment #10)
> I'm not able to reproduce this with an existing user on git-master or KDE
> Neon with Plasma 6.4.1, KF 6.15.0, Qt 6.9.0, just as a data point
> 
> Can you try with a new user on your upgraded 6.4.1 system? Thanks.

I just made a new user called test, and the bug still happens.
Comment 12 LuneLovehearn 2025-06-27 01:42:20 UTC
Created attachment 182711 [details]
video showcasing the bug even with a new user

here's a video showcasing the bug, on a clean new user, on vanilla arch upgraded from plasma 6.3.5
Comment 13 LuneLovehearn 2025-06-27 01:44:15 UTC
(In reply to LuneLovehearn from comment #12)
> Created attachment 182711 [details]
> video showcasing the bug even with a new user
> 
> here's a video showcasing the bug, on a clean new user, on vanilla arch
> upgraded from plasma 6.3.5

as you can see, it not only affects the desktop, but also dolphin to some degree. 
I'll load plasma 6.4.1 on another PC I have and do same testing, while trying to fetch info from journalctl.
Comment 14 John Kizer 2025-06-27 03:20:57 UTC
I can reproduce on:

* Fedora KDE 42 device with Plasma 6.4.0
* EndeavourOS VM with Plasma 6.4.1
* KDE Neon VM with Plasma 6.4.1

I cannot reproduce on:

* Kubuntu 25.04 VM with Plasma 6.3.5

Copy-pasting to the desktop by using Ctrl+C from Dolphin, clicking on the Desktop, then pressing Ctrl+V, does work.

Thanks!
Comment 15 LuneLovehearn 2025-06-27 04:54:05 UTC
Created attachment 182716 [details]
footage of the issue

As requested, I made a new user, on a real PC with cachyOS (arch based) with plasma 6.4.1
the issue persists, and this video shows it.
Comment 16 LuneLovehearn 2025-06-27 04:55:52 UTC
(In reply to John Kizer from comment #14)
> I can reproduce on:
> 
> * Fedora KDE 42 device with Plasma 6.4.0
> * EndeavourOS VM with Plasma 6.4.1
> * KDE Neon VM with Plasma 6.4.1
> 
> I cannot reproduce on:
> 
> * Kubuntu 25.04 VM with Plasma 6.3.5
> 
> Copy-pasting to the desktop by using Ctrl+C from Dolphin, clicking on the
> Desktop, then pressing Ctrl+V, does work.
> 
> Thanks!

I can confirm that copy/cut-paste works when using keyboard shortcuts from dolphin to the desktop. It's the drag and drop not triggering the menu to select copy, paste, etc when using the desktop
Comment 17 LuneLovehearn 2025-06-27 04:57:12 UTC
the only useful info I could get from the journal is an event related to the mouse/touchpad, that shows up when trying to drag and drop files on the desktop:

```

jun 27 00:42:58 Acer-Aspire-4743 plasmashell[2750]: file:///usr/share/plasma/plasmoids/org.kde.plasma.systemtray/contents/ui/items/PlasmoidItem.qml:208: TypeError: Cannot read property 'fullRepresentationItem' of null
jun 27 00:42:58 Acer-Aspire-4743 plasmashell[2750]: file:///usr/share/plasma/plasmoids/org.kde.plasma.systemtray/contents/ui/items/PlasmoidItem.qml:201: TypeError: Cannot read property 'compactRepresentationItem' of null
jun 27 00:42:58 Acer-Aspire-4743 plasmashell[2750]: file:///usr/share/plasma/plasmoids/org.kde.plasma.systemtray/contents/ui/items/PlasmoidItem.qml:24: TypeError: Cannot read property 'toolTipMainText' of null
jun 27 00:43:26 Acer-Aspire-4743 wpa_supplicant[575]: wlan0: CTRL-EVENT-SIGNAL-CHANGE above=0 signal=-72 noise=-95 txrate=1000
jun 27 00:43:37 Acer-Aspire-4743 plasmashell[2750]: cannot grab mouse: no event is currently being delivered
jun 27 00:43:43 Acer-Aspire-4743 plasmashell[2750]: cannot grab mouse: no event is currently being delivered
jun 27 00:43:45 Acer-Aspire-4743 plasmashell[2750]: cannot grab mouse: no event is currently being delivered
jun 27 00:43:46 Acer-Aspire-4743 plasmashell[2750]: cannot grab mouse: no event is currently being delivered
jun 27 00:43:47 Acer-Aspire-4743 wpa_supplicant[575]: wlan0: CTRL-EVENT-BEACON-LOSS
jun 27 00:43:49 Acer-Aspire-4743 systemd[1]: Starting Daily man-db regeneration...
jun 27 00:43:54 Acer-Aspire-4743 plasmashell[2750]: cannot grab mouse: no event is currently being delivered
jun 27 00:43:57 Acer-Aspire-4743 plasmashell[2750]: cannot grab mouse: no event is currently being delivered
jun 27 00:44:13 Acer-Aspire-4743 systemd[1]: man-db.service: Deactivated successfully.
jun 27 00:44:13 Acer-Aspire-4743 systemd[1]: Finished Daily man-db regeneration.
jun 27 00:44:13 Acer-Aspire-4743 systemd[1]: man-db.service: Consumed 5.238s CPU time, 135.1M memory peak.
jun 27 00:44:18 Acer-Aspire-4743 wpa_supplicant[575]: wlan0: CTRL-EVENT-BEACON-LOSS
jun 27 00:44:37 Acer-Aspire-4743 wpa_supplicant[575]: wlan0: CTRL-EVENT-BEACON-LOSS```
Comment 18 LuneLovehearn 2025-06-27 04:58:46 UTC
(In reply to LuneLovehearn from comment #17)
> the only useful info I could get from the journal is an event related to the
> mouse/touchpad, that shows up when trying to drag and drop files on the
> desktop:
> 
> ```
> 
> jun 27 00:42:58 Acer-Aspire-4743 plasmashell[2750]:
> file:///usr/share/plasma/plasmoids/org.kde.plasma.systemtray/contents/ui/
> items/PlasmoidItem.qml:208: TypeError: Cannot read property
> 'fullRepresentationItem' of null
> jun 27 00:42:58 Acer-Aspire-4743 plasmashell[2750]:
> file:///usr/share/plasma/plasmoids/org.kde.plasma.systemtray/contents/ui/
> items/PlasmoidItem.qml:201: TypeError: Cannot read property
> 'compactRepresentationItem' of null
> jun 27 00:42:58 Acer-Aspire-4743 plasmashell[2750]:
> file:///usr/share/plasma/plasmoids/org.kde.plasma.systemtray/contents/ui/
> items/PlasmoidItem.qml:24: TypeError: Cannot read property 'toolTipMainText'
> of null
> jun 27 00:43:26 Acer-Aspire-4743 wpa_supplicant[575]: wlan0:
> CTRL-EVENT-SIGNAL-CHANGE above=0 signal=-72 noise=-95 txrate=1000
> jun 27 00:43:37 Acer-Aspire-4743 plasmashell[2750]: cannot grab mouse: no
> event is currently being delivered
> jun 27 00:43:43 Acer-Aspire-4743 plasmashell[2750]: cannot grab mouse: no
> event is currently being delivered
> jun 27 00:43:45 Acer-Aspire-4743 plasmashell[2750]: cannot grab mouse: no
> event is currently being delivered
> jun 27 00:43:46 Acer-Aspire-4743 plasmashell[2750]: cannot grab mouse: no
> event is currently being delivered
> jun 27 00:43:47 Acer-Aspire-4743 wpa_supplicant[575]: wlan0:
> CTRL-EVENT-BEACON-LOSS
> jun 27 00:43:49 Acer-Aspire-4743 systemd[1]: Starting Daily man-db
> regeneration...
> jun 27 00:43:54 Acer-Aspire-4743 plasmashell[2750]: cannot grab mouse: no
> event is currently being delivered
> jun 27 00:43:57 Acer-Aspire-4743 plasmashell[2750]: cannot grab mouse: no
> event is currently being delivered
> jun 27 00:44:13 Acer-Aspire-4743 systemd[1]: man-db.service: Deactivated
> successfully.
> jun 27 00:44:13 Acer-Aspire-4743 systemd[1]: Finished Daily man-db
> regeneration.
> jun 27 00:44:13 Acer-Aspire-4743 systemd[1]: man-db.service: Consumed 5.238s
> CPU time, 135.1M memory peak.
> jun 27 00:44:18 Acer-Aspire-4743 wpa_supplicant[575]: wlan0:
> CTRL-EVENT-BEACON-LOSS
> jun 27 00:44:37 Acer-Aspire-4743 wpa_supplicant[575]: wlan0:
> CTRL-EVENT-BEACON-LOSS```

So, it's not just on a VM, but also on bare metal that the bug happens.
Comment 19 Akseli Lahtinen 2025-07-01 11:48:23 UTC
Sadly I can't repro this, I get the context menu popup as expected.


Operating System: Fedora Linux 42
KDE Plasma Version: 6.4.80
KDE Frameworks Version: 6.16.0
Qt Version: 6.9.1
Kernel Version: 6.15.4-200.fc42.x86_64 (64-bit)
Graphics Platform: Wayland
Processors: 12 × AMD Ryzen 5 3600 6-Core Processor
Memory: 16 GiB of RAM (15.5 GiB usable)
Graphics Processor: AMD Radeon RX 6600
Comment 20 Akseli Lahtinen 2025-07-01 11:52:45 UTC
I did notice something:

If I move the other icon on the edge of the icon below, it snaps next to it

If I move the other icon on top of the icon below, it asks me for the context menu

I am not sure if this is related, but the hitboxes seem off.
Comment 21 LuneLovehearn 2025-07-02 00:05:26 UTC
another user is reporting this issue as per this post:
https://www.reddit.com/r/kde/comments/1lme9fy/drag_and_drop_menu_not_showing_when_i_try_to/
the following bug may be a duplicated of this one: https://bugs.kde.org/show_bug.cgi?id=505984
Comment 22 TraceyC 2025-07-02 00:36:46 UTC
*** Bug 505984 has been marked as a duplicate of this bug. ***
Comment 23 Akseli Lahtinen 2025-07-02 08:19:33 UTC
Huh, now I can repro this!

What I did was have dolphin open, changed between activities and tried to drag and drop to desktop. It worked before I started changing activities.

Have the reporters here also changed activities or virtual desktops before trying to do anything with the icons?

Anyhow, will investigate now that I can repro it.
Comment 24 Bug Janitor Service 2025-07-02 10:11:33 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kio/-/merge_requests/1923
Comment 25 LuneLovehearn 2025-07-02 22:16:59 UTC
(In reply to Akseli Lahtinen from comment #23)
> Huh, now I can repro this!
> 
> What I did was have dolphin open, changed between activities and tried to
> drag and drop to desktop. It worked before I started changing activities.
> 
> Have the reporters here also changed activities or virtual desktops before
> trying to do anything with the icons?
> 
> Anyhow, will investigate now that I can repro it.

no, as I don't use activities, I only use the virtual desktops. but on this testing, the vanilla settings were used, only 1 desktop, 1 activity.
making a new user was also used for testing and the bug still happens.
Comment 26 LuneLovehearn 2025-07-02 22:18:16 UTC
(In reply to LuneLovehearn from comment #25)
> (In reply to Akseli Lahtinen from comment #23)
> > Huh, now I can repro this!
> > 
> > What I did was have dolphin open, changed between activities and tried to
> > drag and drop to desktop. It worked before I started changing activities.
> > 
> > Have the reporters here also changed activities or virtual desktops before
> > trying to do anything with the icons?
> > 
> > Anyhow, will investigate now that I can repro it.
> 
> no, as I don't use activities, I only use the virtual desktops. but on this
> testing, the vanilla settings were used, only 1 desktop, 1 activity.
> making a new user was also used for testing and the bug still happens.

glad that (In reply to Akseli Lahtinen from comment #23)
> Huh, now I can repro this!
> 
> What I did was have dolphin open, changed between activities and tried to
> drag and drop to desktop. It worked before I started changing activities.
> 
> Have the reporters here also changed activities or virtual desktops before
> trying to do anything with the icons?
> 
> Anyhow, will investigate now that I can repro it.

glad you can dig into the bug, and I saw a merge request, hope this gets resolved.
Comment 27 Méven 2025-07-08 08:49:03 UTC
Git commit 2132b6ceb22f9e5890dd76e114215987db7deb5f by Méven Car, on behalf of Akseli Lahtinen.
Committed on 08/07/2025 at 08:48.
Pushed by meven into branch 'master'.

DropJob: Emit popupMenuAboutToShow after setting things up

When adding actions to the popup, we were emitting popupMenuAboutToShow
too early, before we had the actions added. This could cause race
conditions, especially if there are plugin actions for the item.

We need to make sure our popup and its itemProps are done and ready
before emitting the signal. If we emit too early, we sometimes
ended up finishing making up the menu after DropJob::showMenu was
called, which would have nothing in it's m_menus set and thus do
nothing.

M  +1    -2    src/widgets/dropjob.cpp

https://invent.kde.org/frameworks/kio/-/commit/2132b6ceb22f9e5890dd76e114215987db7deb5f
Comment 28 indisputable 2025-07-08 09:10:06 UTC
Good job! When the update will be available?
Comment 29 Nate Graham 2025-07-09 21:24:54 UTC
Frameworks 6.17, unless KDE or distros backport it.